[package]
name = "dmedia"
author = "alecsavvy"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
ethcontract = "0.13.1"
juniper = "0.15.7"
redis = { version = "0.21.0", features = ["tokio-comp"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = {version = "1.9.0", features = ["full"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}
