[package]
name = "dmedia"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
dotenv = "0.15.0"
envy = "0.4"
ethcontract = "0.13.1"
juniper = "0.15.7"
lazy_static = "1.4.0"
redis = { version = "0.21.0", features = ["tokio-comp"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
strum = "0.21"
strum_macros = "0.21"
tokio = {version = "1.9.0", features = ["full"]}
uuid = {version = "0.8.2", features = ["v4", "serde"]}
